# poletna22

Java_gRPC/: .gitignore  README.md  build.gradle  settings.gradle
Java_gRPC/ssl/: ca.crt  ca.key  instructions.sh  server.crt  server.csr  server.key  server.pem
activemq_demo/: pom.xml
bff_restaurant/console_client/: pom.xml
bff_restaurant/customer/: pom.xml
bff_restaurant/mobile_bff/: .env  package.json
bff_restaurant/mobile_client/: settings.gradle
bff_restaurant/order/: pom.xml
bff_restaurant/restaurant/: pom.xml
bff_restaurant/web_bff/: .env  package.json
docker/20_jee_mysql_compose/: docker-compose.yml
docker/_vagrant_hyperV/: Vagrantfile  run.bat  startcontainers.sh
expressts/: package.json  tsconfig.json  tsoa.json
expressts/public/: swagger.json
expressts/src/: server.ts
firebase_auth_express/: .gitignore  README.md  package.json  poletnasola22-firebase-adminsdk-awx7b-494e323173.json  server.js
firebase_auth_react/: .env  .firebaserc  README.md  package.json
firebase_auth_react/src/: App.css  App.js  firebaseConfig.js
k8s/: demo-deployment.yaml
microfrontends/: README.md
microprofile_measurements/: pom.xml  readme.md
mlp_classification_example/: car_insurance_data.csv  warranty_claims.csv
nextjs/: .env.local  package.json
nextjs/components/: Nav.js  (+2 more)
quarkus_measurements/: pom.xml
sklearn_flask_ms/: README.md  docker-compose.yml  main.py  pyproject.toml
spring_actuator/: pom.xml
spring_measurements_backend/: deployment.yaml  k8s-deployment-spring-db.yaml  mikrostoritev-deployment.yaml  mikrostoritev-service.yaml
(+198 files in other folders)
