[tool.poetry]
name = "sklearn_flask_ms"
version = "0.1.0"
description = "Scikit Learn with flask serving predictive model as micro service"
authors = ["Grega Vrbančič <grega.vrbancic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.9"
Flask = "^2.1.2"
scikit-learn = "1.0.2"
numpy = "1.21.0"
pandas = "1.3.5"
neptune-client = "0.16.3"
python-dotenv = "^0.20.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
